--- a/public/css/cover.css
+++ b/public/css/cover.css
@@ -19,7 +19,10 @@
 body {
   text-shadow: 0 .05rem .1rem rgba(0, 0, 0, .5);
   box-shadow: inset 0 0 5rem rgba(0, 0, 0, .5);
-  background-image: url("../images/auction-app-bg-compressed.jpg");
+  /* background-image: url("../images/auction-app-bg-compressed.jpg"); */
+  background: #C04848;  /* fallback for old browsers */
+    background: linear-gradient(rgb(72,0,72,0.8), rgb(192,72,72,0.8)), url("../images/auction-app-bg-compressed.jpg");  /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(rgb(72,0,72,0.8), rgb(192,72,72,0.8)), url("../images/auction-app-bg-compressed.jpg"); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 }
 
 .cover-container {
