--- a/views/home.ejs
+++ b/views/home.ejs
@@ -154,25 +154,25 @@
 <div class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column">
   <header class="mb-auto">
     <div>
-      <h3 class="float-md-start mb-0">Cover</h3>
+      <h3 class="float-md-start mb-0">Logo</h3>
       <nav class="nav nav-masthead justify-content-center float-md-end">
         <a class="nav-link fw-bold py-1 px-0 active" aria-current="page" href="#">Home</a>
         <a class="nav-link fw-bold py-1 px-0" href="#">Sign In</a>
-        <a class="nav-link fw-bold py-1 px-0" href="#">Sign Up</a>
+        <!-- <a class="nav-link fw-bold py-1 px-0" href="#">Sign Up</a> -->
       </nav>
     </div>
   </header>
 
   <main class="px-3">
-    <h1>Cover your page.</h1>
-    <p class="lead">Cover is a one-page template for building simple and beautiful home pages. Download, edit the text, and add your own fullscreen background photo to make it your own.</p>
+    <h1>Auction App</h1>
+    <p class="lead">Start bidding on Auctioned items now! </p>
     <p class="lead">
-      <a href="#" class="btn btn-lg btn-light fw-bold border-white bg-white">Learn more</a>
+      <a href="#" class="btn btn-lg btn-light fw-bold border-white bg-white">Start Here - Sign Up is Free</a>
     </p>
   </main>
 
   <footer class="mt-auto text-white-50">
-    <p>Cover template for <a href="https://getbootstrap.com/" class="text-white">Bootstrap</a>, by <a href="https://twitter.com/mdo" class="text-white">@mdo</a>.</p>
+    <p>SEI7 - Project 2 <a href="https://getbootstrap.com/" class="text-white"> | &copy; 2023 - Auctioneers Team</a></p>
   </footer>
 </div>
 
