--- a/views/home.ejs
+++ b/views/home.ejs
@@ -157,8 +157,8 @@
       <h3 class="float-md-start mb-0">Logo</h3>
       <nav class="nav nav-masthead justify-content-center float-md-end">
         <a class="nav-link fw-bold py-1 px-0 active" aria-current="page" href="#">Home</a>
-        <a class="nav-link fw-bold py-1 px-0" href="#">Sign In</a>
-        <!-- <a class="nav-link fw-bold py-1 px-0" href="#">Sign Up</a> -->
+        <a class="nav-link fw-bold py-1 px-0 active" aria-current="page" href="/auth/google"><button type = "submit" style="background-color: transparent; border: none; color:white; font-weight: bold;">Sign In</button></a>      
+        <a class="nav-link fw-bold py-1 px-0" href="/logout"><button type = "submit" style="background-color: transparent; border: none; color:white; font-weight: bold;">Sign Out</button></a>
       </nav>
     </div>
   </header>
@@ -167,7 +167,7 @@
     <h1>Auction App</h1>
     <p class="lead">Start bidding on Auctioned items now! </p>
     <p class="lead">
-      <a href="#" class="btn btn-lg btn-light fw-bold border-white bg-white">Start Here - Sign Up is Free</a>
+      <a href="/auth/google" class="btn btn-lg btn-light fw-bold border-white bg-white">Start Here - Sign Up is Free</a>
     </p>
   </main>
 
