--- a/views/auction/index.ejs
+++ b/views/auction/index.ejs
@@ -1,25 +1,72 @@
-<h1>Auctions</h1>
+<main>
+
+  <div class="album py-5 bg-body-tertiary">
+      <div class="container">
+  
+          <h1><%= title %></h1>
+  
+  <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
+  
+      <nav class="navbar bg-body-tertiary">
+          <div class="container-fluid justify-content-start">
+              <a class="btn btn-sm btn-outline-success me-2" href="/auction/add">Add New Auction</a>
+          </div>
+      </nav>
 
 <table class="table table-striped">
   <tr>
-    <th>Name</th>
-    <th>Email Address</th>
-    <th>Phone Number</th>
-    <th>Delete</th>
-    <th>Edit</th>
+    <th>No.</th>
+    <th>Auctioned Item Name</th>
+    <th>Category</th>
+    <th>Minimum Price</th>
+    <th>Start Date</th>
+    <th>End Date</th>
+    <th>Created / Updated</th>
+    <th>Action(s)</th>
   </tr>
 
-<% auctions.forEach(function (auction) {  %>
+<% auctions.forEach(function (auction, index) {  %>
   <tr>
-    <td><a href="/auction/detail?id=<%= auction._id %>"><%= auction.aucction_name %></a></td>
-    <td><%= auction.auction_date %></td>
-    <td><%= auction.item_category %></td>
-    <td><%= auction.item_name %></td>
-    <td><%= auction.sarting_price %></td>
-    <td><%= auction.item_img %></td> 
-    <td><a href="/auction/delete?id=<%= auction._id %>">Delete</a></td>
-    <td><a href="/auction/edit?id=<%= auction._id %>">Edit</a></td>
+    <td><%= index+1 %></td>
+    <td><a href="/auction/detail?id=<%= auction._id %>"><%= auction.name %></a></td>
+    <td><%= auction.category %></td>
+    <td><%= auction.min_price %></td>
+    <td><%= dayjs(auction.start_date).format('DD/MM/YYYY') %></td>
+    <td><%= dayjs(auction.end_date).format('DD/MM/YYYY') %></td>
+    <td><small><kbd>Created: <%= dayjs(auction.createdAt).format('DD/MM/YYYY') %></kbd> <kbd>Updated <%= dayjs(auction.updatedAt).fromNow(true) %> ago</kbd></small></td>
+    <td><a class="btn btn-sm btn-warning" href="/auction/edit?id=<%= auction._id %>"><i class="bi-pencil-fill"></i></a> <button type="button" class="btn btn-sm btn-danger" data-bs-toggle="modal" data-bs-target="#D<%= index+1 %>">
+      <i class="bi-trash3-fill"></i></button>
+
+<div class="modal fade" id="D<%= index+1 %>" tabindex="-1" aria-labelledby="exampleModalLabel<%= index+1 %>" aria-hidden="true">
+<div class="modal-dialog">
+<div class="modal-content">
+  <div class="modal-header">
+      <h1 class="modal-title fs-3 text-danger" id="exampleModalLabel<%= index+1 %>">Are you sure you want to delete this Auction?</h1>
+      <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+  </div>
+  <div class="modal-body">
+      Auction: <%= auction.name %> <br>
+      Minimum Price: <%= auction.min_price %> <br>
+      Start Date: <%= dayjs(auction.start_date).format('DD/MM/YYYY') %><br>
+      End Date: <%= dayjs(auction.end_date).format('DD/MM/YYYY') %><br>
+  </div>
+  <div class="modal-footer">
+  <form method="POST" action="/auction/delete?id=<%= auction._id %>">
+      <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
+      <button type="submit" class="btn btn-danger">Delete</button>
+  </form>
+  </div>
+</div>
+</div>
+</div> 
+      
+      </td>
   </tr>
 <% }) %>
 
 </table>
+
+</div>
+</div>
+
+</main>
