--- a/views/category/add.ejs
+++ b/views/category/add.ejs
@@ -1,3 +1,9 @@
+<main>
+
+  <div class="album py-5 bg-body-tertiary">
+  <div class="container">
+
+
 <h1>Add Category</h1>
 <form method="POST" action="/category/add">
   <div>
@@ -7,6 +13,10 @@
   <br>
   <button type="submit" class="btn btn-primary">Create Category</button>
 </form>
+  </div>
+</div>
+
+</main>
 
 
 
