--- a/views/category/index.ejs
+++ b/views/category/index.ejs
@@ -25,10 +25,10 @@
     <tr>
       <td><%= index+1 %></td>
       <td><%= cat.category_name %></td>
-      <td><%= dayjs(category.createdAt).format('DD/MM/YYYY') %></td>
-      <td>Updated <%= dayjs(category.updatedAt).fromNow(true) %> ago</td>
+      <td><%= dayjs(cat.createdAt).format('DD/MM/YYYY') %></td>
+      <td>Updated <%= dayjs(cat.updatedAt).fromNow(true) %> ago</td>
       <td>
-      <a class="btn btn-sm btn-warning" href="/category/edit?id=<%= category._id %>"><i class="bi-pencil-fill"></i></a> <button type="button" class="btn btn-sm btn-danger" data-bs-toggle="modal" data-bs-target="#D<%= index+1 %>">
+      <a class="btn btn-sm btn-warning" href="/category/edit?id=<%= cat._id %>"><i class="bi-pencil-fill"></i></a> <button type="button" class="btn btn-sm btn-danger" data-bs-toggle="modal" data-bs-target="#D<%= index+1 %>">
         <i class="bi-trash3-fill"></i></button>
 
 <div class="modal fade" id="D<%= index+1 %>" tabindex="-1" aria-labelledby="exampleModalLabel<%= index+1 %>" aria-hidden="true">
@@ -42,7 +42,7 @@
         Category Name: <%= cat.category_name %> 
     </div>
     <div class="modal-footer">
-    <form method="POST" action="/category/delete?id=<%= category._id %>">
+    <form method="POST" action="/category/delete?id=<%= cat._id %>">
         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
         <button type="submit" class="btn btn-danger">Delete</button>
     </form>
