--- a/views/user/edit.ejs
+++ b/views/user/edit.ejs
@@ -16,22 +16,27 @@
 
         <div>
             <label>Google Id</label>
-            <textarea name="googleId" readonly><%= users.googleId %></textarea> 
+            <input name="googleId" value="<%= users.googleId %>" style="background-color: lightgray" readonly>
         </div>
     
         <div>
             <label>Email</label>
-            <input type="text" name="email" value="<%= users.email %>" readonly>
+            <input type="text" name="email" value="<%= users.email %>" style="background-color: lightgray" readonly>
         </div>
         
         <div>
             <label>Users Image</label>
-            <input type="text" name="avatar" value="<%= users.avatar %>">
+            <img src="<%= users.avatar %>" referrerpolicy="no-referrer" height="35px"></img>            
+
         </div>
         
         <div>
             <label>Users Type</label>
-            <input type="number" name="userType" value="<%= users.userType%>" min="1" max="3">
+            <select name="userType">
+                <option value="1" <% users.userType = 1%> selected>Admin</option>
+                <option value="2" <% users.userType = 2%> selected>Auctioneer</option>
+                <option value="3" <% users.userType = 3%> selected>Bidder</option>
+            </select>
         </div>
         
         <input type="hidden" name="id" value="<%= users._id %>">
