--- a/views/auction/add.ejs
+++ b/views/auction/add.ejs
@@ -27,7 +27,7 @@
 
   <div class="form-check">
     <label for="end_date" class="form-label">End Date</label>
-    <input id="end_date" name="end_date" type="date" class="form-control" required>
+    <input id="end_date" name="end_date" type="date" class="form-control" value="" min="" max="" required>
     <input type="time" id="time" name="time" min="00:00" max="23:59" class="form-control" required>
   </div>
 
