--- a/views/user/index.ejs
+++ b/views/user/index.ejs
@@ -9,11 +9,15 @@
     
         <table class="table">
             <thead>
-                    <th scope="col">Users Type</th>
-                    <th scope="col">Created</th>
-                    <th scope="col">Updated</th>
-                    <th scope="col">Action(s)</th>
-    
+                <th scope="col">Name</th>
+                <th scope="col">Google Id</th>
+                <th scope="col">Email</th>
+                <th scope="col">Users Image</th>
+                <th scope="col">Users Type</th>
+                <th scope="col">Created</th>
+                <th scope="col">Updated</th>
+                <th scope="col">Action(s)</th>
+
                 </tr>
             </thead>
     
