--- a/views/auction/add.ejs
+++ b/views/auction/add.ejs
@@ -58,7 +58,7 @@
   <div class="col-lg-4 col-md-6 col-sm-12">
     <div class="form-check pb-3">
       <label for="item_img" class="form-label">Photo (.jpg or .png - max. 512KB)</label>
-    <input class="form-control" onchange="validateSize(this)" type="file" name="item_img" id="item_img" accept="image/png, image/jpeg">
+    <input class="form-control" onchange="validateSize(this)" type="file" name="item_img" id="item_img" accept=".png, .jpg, .jpeg, .gif">
     </div>
   </div>
 
