link user to bid id and auction id - auction js and bid js controllers

--- a/views/auction/add.ejs
+++ b/views/auction/add.ejs
@@ -67,7 +67,7 @@
 <div class="row">
     <div class="d-grid gap-2 col-4 col-sm-8 mx-auto">
       <input name="status" type="hidden" value="true" class="form-control" required>
-      <!-- <input type="hidden" name="id" value="<%= //users._id %>"> -->
+      <input type="hidden" name="id" id="id" value="<%= user._id %>">
       <button type="submit" class="btn btn-primary">Create Auction</button>
     </div>
 </div>
