--- a/views/bid/add.ejs
+++ b/views/bid/add.ejs
@@ -58,6 +58,7 @@
 
         <div class="row">
             <div class="d-grid gap-2 col-4 col-sm-8 mx-auto">
+            <input type="hidden" name="id" id="id" value="<%= user._id %>">
             <button class="btn btn-bd-primary" type="submit">Submit Bid</button>
             </div>
         </div>
