--- a/views/auction/detail.ejs
+++ b/views/auction/detail.ejs
@@ -3,19 +3,18 @@
   <div class="album py-5 bg-body-tertiary">
   <div class="container">
 
-<div>
-  <div>
-    <h3><%= auction.name %></h3>
-    <div>Auction Date: <%= auction.min_price %></div>
-    <div>Description: <%= auction.description %></div>
-    <div>Day of Auction: <%= dayjs(auction.end_date).format('YYYY-MM-DD') %></div>
-    <div>Picture of the Item: <%= auction.item_img %></div>
-    <div>Item Staus: <%= auction.status %></div>
-    
-  </div>
-  
 
-  <br>
-</div></div></div></main>
+        <h3>Item: <%= auction.name %></h3>
+        <div>Minimum Price: <%= auction.min_price %></div>
+        <div>Description: <%= auction.description %></div>
+        <div>End Date: <%= dayjs(auction.end_date).format('YYYY-MM-DD') %></div>
+        <div>Picture of the Item: <%= auction.item_img %></div>
+        <div>Item Staus: <%= auction.status %></div>
+        
+
+  </div>
+  </div>
+
+</main>
   
   
