--- a/views/bid/detail.ejs
+++ b/views/bid/detail.ejs
@@ -3,19 +3,16 @@
   <div class="album py-5 bg-body-tertiary">
   <div class="container">
 
-<div>
-  <div>
     
     <div>Amount: <%= bid.amount %></div>
     <div>Note: <%= bid.note %></div>
     <div>Status: <%= bid.status %></div>
     
-    
-  </div>
-  
-    
 
-  <br>
-</div></div></div></main>
+  </div>
+</div>
+
+</main>
+
   
   
