--- a/public/css/style.css
+++ b/public/css/style.css
@@ -237,3 +237,28 @@ font-family: "Playfair Display", Georgia, "Times New Roman", serif/*rtl:Amiri, G
     font-size: 0.7rem;
     color: black;
 }
+
+.bid_now{
+    position: absolute;
+    right: 10px;
+    margin-top: -40px;
+}
+
+.profile_img {
+    display: inline-block;
+    height: 33px;
+    width: 33px;
+    border-radius: 100%;
+    border: 1px solid black;
+    text-align: center;
+    position: relative;
+    overflow: hidden;
+}
+
+.img_profile {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+}
