--- a/views/auction/edit.ejs
+++ b/views/auction/edit.ejs
@@ -15,7 +15,7 @@
     <input id="category" name="category" type="text" class="form-control" required> -->
 
     <label for="category" class="form-label">Category</label>
-    <input type="text" id="category" name="category" class="form-control" value="<%= auction.categories[0].category_name %>" disabled>
+    <input type="text" id="category" name="category" class="form-control" value="<%= auction.category.category_name %>" disabled>
 
   </div>
 
@@ -51,7 +51,7 @@
 
   
   <div class="col-lg-4 col-md-6 col-sm-12">
-    <img src="../images/items/<%= auction.item_img %>" width="100%">
+    <img src="/images/items/<%= auction.item_img %>" width="100%">
   </div>
 
   <br>
