--- a/views/user/profile.ejs
+++ b/views/user/profile.ejs
@@ -1,30 +1,64 @@
 <!-- User Profile.ejs -->
 <main>
-
-    <div class="album py-5 bg-body-tertiary">
-        <div class="container">
-        <h1>Welcome to your profile</h1>
-
-    <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
-        <form method="POST" action="/user/updateUser">
-            <div>
-                <label>Name</label>
-                <input type="text" name="name" value="<%= user.name %>">
+    <main>
+        <div class="album py-5 bg-body-tertiary">
+          <div class="container">
+            <h1>Welcome to your profile</h1>
+      
+            <div class="row">
+              <form method="POST" enctype="multipart/form-data" action="/user/updateUser" autocomplete="off">
+                <div class="col-lg-4 col-md-6 col-sm-12">
+                  <div class="form-check pb-3">
+                    <img src="<%= user.avatar %>" referrerpolicy="no-referrer" height="100px"></img>            
+                    <div>
+                    <label for="item_img" class="form-label">Photo (.jpg or .png - max. 512KB)</label>
+                    <input class="form-control" onchange="validateSize(this)" type="file" name="item_img" id="item_img" accept=".png, .jpg, .jpeg, .gif" >
+                    </div>  
+                   </div>
+                </div>
+      
+                <div class="col-lg-8 col-md-6 col-sm-12">
+                  <div class="row g-3">
+                    <div class="col-12">
+                      <label for="description" class="form-label">Name</label>
+                      <div class="form-floating pb-3">
+                        <input type="text" name="name" value="<%= user.name %>">
+                      </div>
+                    </div>
+      
+                    <div class="col-12">
+                      <label for="description" class="form-label">Email</label>
+                      <div class="form-floating pb-3">
+                        <input class="form-control" type="text" name="email" value="<%= user.email %>" style="background-color: lightgray" readonly>
+                      </div>
+                    </div>
+      
+                    <div class="col-12">
+                      <input name="status" type="hidden" value="true" class="form-control" required>
+                      <input type="hidden" name="id" value="<%= user._id %>">
+                      <button type="submit" class="btn btn-primary">Edit Your Profile</button>
+                    </div>
+                  </div>
+                </div>
+              </form>
             </div>
-    
-            <div>
-                <label>Email</label>
-                <input type="text" name="email" value="<%= user.email %>" style="background-color: lightgray" readonly>
+          </div>
+        </div>
+        <!-- Warning Modal -->
+        <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+          <div class="modal-dialog">
+            <div class="modal-content">
+              <div class="modal-header bg-danger">
+                <h1 class="modal-title fs-5 text-white" id="exampleModalLabel">File Size not accepted</h1>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+              </div>
+              <div class="modal-body">
+                <p>Cannot upload a file exceeding 512KB. Please choose another photo.</p>
+              </div>
+              <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+              </div>
             </div>
-    
-            <div>
-                <label>User's Image</label>
-                <img src="<%= user.avatar %>" referrerpolicy="no-referrer" height="35px"></img>            
-    
-            </div>
-    
-            <input type="hidden" name="id" value="<%= user._id %>">
-            <button type="submit">Edit Your Profile</button>
-        </form>
-
-</main>
+          </div>
+        </div>
+      </main>
