--- a/views/auction/edit.ejs
+++ b/views/auction/edit.ejs
@@ -5,7 +5,7 @@
 
 <h1><%= title %></h1>
 
-<form method="POST"  enctype="multipart/form-data" method="POST" action="/auction/update" autocomplete="off">
+<form method="POST"  enctype="multipart/form-data" action="/auction/update" autocomplete="off">
 <div class="row g-3">
 
   <div class="col-lg-4 col-md-12 col-sm-12">
