--- a/views/home/main.ejs
+++ b/views/home/main.ejs
@@ -8,7 +8,7 @@
 
 <div class="col-sm-6 col-lg-4 mb-4">
 <div class="card">
-    <img src="../images/items/<%= auction.item_img %>">
+    <img src="<%= auction.item_img %>">
     <div class="card-body">
     <h5 class="card-title"><%= auction.name %></h5> 
     <p class="card-text pt-3"><small><%= auction.description %></small></p>
