fixing bids form -missing linking with auctions. added dayjs

--- a/views/auction/index.ejs
+++ b/views/auction/index.ejs
@@ -19,7 +19,7 @@
     <th>Auctioned Item Name</th>
     <th>Category</th>
     <th>Minimum Price</th>
-    <th>Start Date</th>
+    <!-- <th>Start Date</th> -->
     <th>End Date</th>
     <th>Created / Updated</th>
     <th>Action(s)</th>
@@ -31,9 +31,9 @@
     <td><a href="/auction/detail?id=<%= auction._id %>"><%= auction.name %></a></td>
     <td><%= auction.category %></td>
     <td><%= auction.min_price %></td>
-    <td><%= dayjs(auction.start_date).format('DD/MM/YYYY') %></td>
-    <td><%= dayjs(auction.end_date).format('DD/MM/YYYY') %></td>
-    <td><small><kbd>Created: <%= dayjs(auction.createdAt).format('DD/MM/YYYY') %></kbd> <kbd>Updated <%= dayjs(auction.updatedAt).fromNow(true) %> ago</kbd></small></td>
+    <!-- <td><%= // dayjs.utc(auction.start_date).format('DD/MM/YYYY') %></td> -->
+    <td><%= dayjs.utc(auction.end_date).format('DD/MM/YYYY HH:mm') %></td>
+    <td><small><kbd>Created: <%= dayjs.utc(auction.createdAt).format('DD/MM/YYYY') %></kbd> <kbd>Updated <%= dayjs.utc(auction.updatedAt).fromNow(true) %> ago</kbd></small></td>
     <td><a class="btn btn-sm btn-warning" href="/auction/edit?id=<%= auction._id %>"><i class="bi-pencil-fill"></i></a> <button type="button" class="btn btn-sm btn-danger" data-bs-toggle="modal" data-bs-target="#D<%= index+1 %>">
       <i class="bi-trash3-fill"></i></button>
 
@@ -47,8 +47,8 @@
   <div class="modal-body">
       Auction: <%= auction.name %> <br>
       Minimum Price: <%= auction.min_price %> <br>
-      Start Date: <%= dayjs(auction.start_date).format('DD/MM/YYYY') %><br>
-      End Date: <%= dayjs(auction.end_date).format('DD/MM/YYYY') %><br>
+      Start Date: <%= dayjs.utc(auction.start_date).format('DD/MM/YYYY') %><br>
+      End Date: <%= dayjs.utc(auction.end_date).format('DD/MM/YYYY') %><br>
   </div>
   <div class="modal-footer">
   <form method="POST" action="/auction/delete?id=<%= auction._id %>">
