--- a/views/category/index.ejs
+++ b/views/category/index.ejs
@@ -25,8 +25,8 @@
     <tr>
       <td><%= index+1 %></td>
       <td><%= cat.category_name %></td>
-      <td><%= dayjs(cat.createdAt).format('DD/MM/YYYY') %></td>
-      <td>Updated <%= dayjs(cat.updatedAt).fromNow(true) %> ago</td>
+      <td><%= dayjs.utc(cat.createdAt).format('DD/MM/YYYY') %></td>
+      <td>Updated <%= dayjs.utc(cat.updatedAt).fromNow(true) %> ago</td>
       <td>
       <a class="btn btn-sm btn-warning" href="/category/edit?id=<%= cat._id %>"><i class="bi-pencil-fill"></i></a> <button type="button" class="btn btn-sm btn-danger" data-bs-toggle="modal" data-bs-target="#D<%= index+1 %>">
         <i class="bi-trash3-fill"></i></button>
