--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -84,7 +84,7 @@
                 
                 <% if (!(user.userType == 1)) { %>
                 <li>
-                    <a href="/bid/userbids" class="nav-link text-white">
+                    <a href="/userbids/index" class="nav-link text-white">
                         <div class="bi d-block mx-auto mb-1 menu"><i class="bi bi-file-earmark-plus-fill"></i></div>
                         My Bids
                     </a>
@@ -94,7 +94,7 @@
                 <% if (user.userType==2 ){%>
 
                     <li>
-                        <a href="/auction/userAuctions" class="nav-link text-white">
+                        <a href="/userAuctions/index" class="nav-link text-white">
                             <div class="bi d-block mx-auto mb-1 menu"><i class="bi bi-file-earmark-spreadsheet-fill"></i></div>
                             My Auctions 
                         </a>
