--- a/views/bid/index.ejs
+++ b/views/bid/index.ejs
@@ -8,8 +8,8 @@
     
         <nav class="navbar bg-body-tertiary">
             <div class="container-fluid justify-content-start">
-                <a class="btn btn-sm btn-outline-success me-2" href="/bid/new">Add New Bid</a>
-                <a class="btn btn-sm btn-outline-danger me-2" href="/bid/new/?id=65798f6f58c51d6578eced62">Test a Bid</a> 
+                <button class="btn btn-sm btn-outline-success me-2" href="/bid/new" disabled>Add New Bid</button>
+                <!-- <a class="btn btn-sm btn-outline-danger me-2" href="/bid/new/?id=#">Test a Bid</a>  -->
             </div>
         </nav>
         
@@ -29,7 +29,7 @@
     <% bids.forEach(function (bid, index) { %>
             <tr>
             <td><%= index+1 %>. </td>
-            <td><a href="/bid/detail/?id=<%= bid._id %>">Auction Item</a></td>
+            <td><a href="/bid/detail/?id=<%= bid._id %>"><%= bid.auction.name %></a></td>
             <td><%= bid.amount %></td>
             <td><%= bid.note %></td>
             <td><%= dayjs.utc(bid.createdAt).format('DD/MM/YYYY') %></td>
