adding user typre restrictions on the routes

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -157,7 +157,7 @@
       <h3 class="float-md-start mb-0">Logo</h3>
       <nav class="nav nav-masthead justify-content-center float-md-end">
         <a class="nav-link fw-bold py-1 px-0 active" aria-current="page" href="/main">Market</a>
-        <a class="nav-link fw-bold py-1 px-0 active" aria-current="page" href="#">Home</a>
+        <!-- <a class="nav-link fw-bold py-1 px-0 active" aria-current="page" href="#">Home</a> -->
         <a class="nav-link fw-bold py-1 px-0 active" aria-current="page" href="/auth/google"><button type = "submit" style="background-color: transparent; border: none; color:white; font-weight: bold;">Sign In</button></a>      
         <!-- <a class="nav-link fw-bold py-1 px-0" href="/logout"><button type = "submit" style="background-color: transparent; border: none; color:white; font-weight: bold;">Sign Out</button></a> -->
       </nav>
